clicking on anchor with empty fragment href inside an svg gives warning: Empty string passed to getElementById()
Categories
(Core :: SVG, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox124 | --- | wontfix |
| firefox125 | --- | fixed |
| firefox126 | --- | fixed |
People
(Reporter: eyalgruss, Assigned: longsonr)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
I have on <object> loading an external <svg> which contains <a> elements with href="#".
i want the empty fragment to allow tabstops. the anchor has a role as a button.
in firefox devtools i get "Empty string passed to getElementById()" when clicking the links, and the source of the error is the svg file.
i do not get this error on chromium. See here: https://oulipoh.com/resen/seasons
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
Comment 4•1 year ago
|
||
| bugherder | ||
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
Comment on attachment 9391627 [details]
Bug 1885741 - Check string isn't empty before passing to getElementById r=emilio
Beta/Release Uplift Approval Request
- User impact if declined: SVG use and animation elements with href="#" will result in console warnings. Pretty cosmetic but a prerequisite to fixing bug 1883804, and that bug I would like to get in beta if I manage to fix it.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce: See comment 0 in the bug but its just a console warning, not a functional problem.
Note: The non-empty string case has plenty of automated tests.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple code change that avoids calling getElementById with an empty string, the code continues to call getElementById in all other circumstances.
- String changes made/needed: none
- Is Android affected?: Yes
Comment 6•1 year ago
|
||
Set release status flags based on info from the regressing bug 1867225
Comment 7•1 year ago
|
||
Comment on attachment 9391627 [details]
Bug 1885741 - Check string isn't empty before passing to getElementById r=emilio
Approved for 125.0b2.
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Description
•