Bug 1885741 - Check string isn't empty before passing to getElementById r=emilio a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D204854